--- a/templates/telephone/show.html.twig
+++ b/templates/telephone/show.html.twig
@@ -19,8 +19,12 @@
         <p class="card-text"><small>Téléphone crée par : </small>{{ telephone.user.username }}</p>
         <div class="d-flex justify-content-around">
             <a href="{{ path('telephone') }}" class="text-primary fw-bolder text-decoration-none">Retour aux téléphones</a>
+            {% if app.user%}
+            {% if  app.user.username == telephone.user.username %}
             <a href="{{ path('telephone_edit',{id: telephone.id}) }}" class="fw-bolder text-warning text-decoration-none">Modifier</a>
             <a href="{{ path('telephone_delete',{id: telephone.id}) }}" class="text-danger fw-bolder text-decoration-none">Supprimer</a></div>
+            {% endif %}
+        {% endif %}
     </div>
 </div>
 </section>
